--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "bracomecanico",
   "version": "1.0.0",
-  "description": "Braco mecanico controlado pelo arduino e jonny five",
+  "description": "Braco mecânico controlado pelo arduino e jonny five",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/desireesantos/bracomecanico.git"
@@ -20,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/desireesantos/bracomecanico/issues"
   },
-  "homepage": "https://github.com/desireesantos/bracomecanico"
+  "homepage": "https://github.com/desireesantos/bracomecanico",
+  "dependencies": {
+    "johnny-five": "^0.8.81",
+    "jquery": "^2.1.4",
+    "narf": "^0.2.3",
+    "nrf": "^0.8.3"
+  }
 }
